tests/ui/utils/dump_hir.stderr
note: Item(
          Item {
              ident: Arc#0,
              owner_id: DefId(dump_hir::{use#1}),
              kind: Use(
                  Path {
                      span: tests/ui/utils/dump_hir.rs:9:5: 9:19 (#0),
                      res: [
                          Def(
                              Struct,
                              DefId(alloc::sync::Arc),
                          ),
                      ],
                      segments: [
                          PathSegment {
                              ident: std#0,
                              hir_id: HirId(DefId(dump_hir::{use#1}).1),
                              res: Def(
                                  Mod,
                                  DefId(std),
                              ),
                              args: None,
                              infer_args: false,
                          },
                          PathSegment {
                              ident: sync#0,
                              hir_id: HirId(DefId(dump_hir::{use#1}).2),
                              res: Def(
                                  Mod,
                                  DefId(std::sync),
                              ),
                              args: None,
                              infer_args: false,
                          },
                          PathSegment {
                              ident: Arc#0,
                              hir_id: HirId(DefId(dump_hir::{use#1}).3),
                              res: Err,
                              args: None,
                              infer_args: false,
                          },
                      ],
                  },
                  Single,
              ),
              span: tests/ui/utils/dump_hir.rs:9:1: 9:20 (#0),
              vis_span: tests/ui/utils/dump_hir.rs:9:1: 9:1 (#0),
          },
      )
  --> tests/ui/utils/dump_hir.rs:9:5
   |
LL | #[rpl::dump_hir]
   | ---------------- HIR dumpped because of this attribute
...
LL | use std::sync::Arc;
   |     ^^^^^^^^^^^^^^

note: Item(
          Item {
              ident: m#0,
              owner_id: DefId(dump_hir::m),
              kind: Mod(
                  Mod {
                      spans: ModSpans {
                          inner_span: tests/ui/utils/dump_hir.rs:17:5: 18:2 (#0),
                          inject_use_span: tests/ui/utils/dump_hir.rs:17:5: 17:5 (#0),
                      },
                      item_ids: [
                          ItemId {
                              owner_id: DefId(dump_hir::m::foo),
                          },
                      ],
                  },
              ),
              span: tests/ui/utils/dump_hir.rs:15:1: 18:2 (#0),
              vis_span: tests/ui/utils/dump_hir.rs:15:1: 15:1 (#0),
          },
      )
  --> tests/ui/utils/dump_hir.rs:15:1
   |
LL | #[rpl::dump_hir]
   | ---------------- HIR dumpped because of this attribute
...
LL | mod m {
   | ^^^^^

note: Item(
          Item {
              ident: Foo#0,
              owner_id: DefId(dump_hir::Foo),
              kind: Trait(
                  No,
                  Safe,
                  Generics {
                      params: [],
                      predicates: [],
                      has_where_clause_predicates: false,
                      where_clause_span: tests/ui/utils/dump_hir.rs:24:10: 24:10 (#0),
                      span: tests/ui/utils/dump_hir.rs:24:10: 24:10 (#0),
                  },
                  [],
                  [
                      TraitItemRef {
                          id: TraitItemId {
                              owner_id: DefId(dump_hir::Foo::N),
                          },
                          ident: N#0,
                          kind: Const,
                          span: tests/ui/utils/dump_hir.rs:30:5: 30:20 (#0),
                      },
                  ],
              ),
              span: tests/ui/utils/dump_hir.rs:24:1: 31:2 (#0),
              vis_span: tests/ui/utils/dump_hir.rs:24:1: 24:1 (#0),
          },
      )
  --> tests/ui/utils/dump_hir.rs:24:1
   |
LL | #[rpl::dump_hir]
   | ---------------- HIR dumpped because of this attribute
...
LL | trait Foo {
   | ^^^^^^^^^

note: TraitItem(
          TraitItem {
              ident: N#0,
              owner_id: DefId(dump_hir::Foo::N),
              generics: Generics {
                  params: [],
                  predicates: [],
                  has_where_clause_predicates: false,
                  where_clause_span: tests/ui/utils/dump_hir.rs:30:19: 30:19 (#0),
                  span: tests/ui/utils/dump_hir.rs:30:12: 30:12 (#0),
              },
              kind: Const(
                  Ty {
                      hir_id: HirId(DefId(dump_hir::Foo::N).1),
                      span: tests/ui/utils/dump_hir.rs:30:14: 30:19 (#0),
                      kind: Path(
                          Resolved(
                              None,
                              Path {
                                  span: tests/ui/utils/dump_hir.rs:30:14: 30:19 (#0),
                                  res: PrimTy(
                                      Uint(
                                          Usize,
                                      ),
                                  ),
                                  segments: [
                                      PathSegment {
                                          ident: usize#0,
                                          hir_id: HirId(DefId(dump_hir::Foo::N).2),
                                          res: PrimTy(
                                              Uint(
                                                  Usize,
                                              ),
                                          ),
                                          args: None,
                                          infer_args: false,
                                      },
                                  ],
                              },
                          ),
                      ),
                  },
                  None,
              ),
              span: tests/ui/utils/dump_hir.rs:30:5: 30:20 (#0),
              defaultness: Default {
                  has_value: false,
              },
          },
      )
  --> tests/ui/utils/dump_hir.rs:30:5
   |
LL |     #[rpl::dump_hir]
   |     ---------------- HIR dumpped because of this attribute
...
LL |     const N: usize;
   |     ^^^^^^^^^^^^^^

note: Item(
          Item {
              ident: #0,
              owner_id: DefId(dump_hir::{impl#0}),
              kind: Impl(
                  Impl {
                      constness: NotConst,
                      safety: Safe,
                      polarity: "positive",
                      defaultness: Final,
                      defaultness_span: None,
                      generics: Generics {
                          params: [],
                          predicates: [],
                          has_where_clause_predicates: false,
                          where_clause_span: tests/ui/utils/dump_hir.rs:37:16: 37:16 (#0),
                          span: tests/ui/utils/dump_hir.rs:37:5: 37:5 (#0),
                      },
                      of_trait: Some(
                          TraitRef {
                              path: Path {
                                  span: tests/ui/utils/dump_hir.rs:37:6: 37:9 (#0),
                                  res: Def(
                                      Trait,
                                      DefId(dump_hir::Foo),
                                  ),
                                  segments: [
                                      PathSegment {
                                          ident: Foo#0,
                                          hir_id: HirId(DefId(dump_hir::{impl#0}).1),
                                          res: Def(
                                              Trait,
                                              DefId(dump_hir::Foo),
                                          ),
                                          args: None,
                                          infer_args: false,
                                      },
                                  ],
                              },
                              hir_ref_id: HirId(DefId(dump_hir::{impl#0}).2),
                          },
                      ),
                      self_ty: Ty {
                          hir_id: HirId(DefId(dump_hir::{impl#0}).3),
                          span: tests/ui/utils/dump_hir.rs:37:14: 37:16 (#0),
                          kind: Tup(
                              [],
                          ),
                      },
                      items: [
                          ImplItemRef {
                              id: ImplItemId {
                                  owner_id: DefId(dump_hir::{impl#0}::N),
                              },
                              ident: N#0,
                              kind: Const,
                              span: tests/ui/utils/dump_hir.rs:43:5: 43:30 (#0),
                              trait_item_def_id: Some(
                                  DefId(dump_hir::Foo::N),
                              ),
                          },
                      ],
                  },
              ),
              span: tests/ui/utils/dump_hir.rs:37:1: 44:2 (#0),
              vis_span: tests/ui/utils/dump_hir.rs:37:1: 37:1 (#0),
          },
      )
  --> tests/ui/utils/dump_hir.rs:37:1
   |
LL | #[rpl::dump_hir]
   | ---------------- HIR dumpped because of this attribute
...
LL | impl Foo for () {
   | ^^^^^^^^^^^^^^^

note: ImplItem(
          ImplItem {
              ident: N#0,
              owner_id: DefId(dump_hir::{impl#0}::N),
              generics: Generics {
                  params: [],
                  predicates: [],
                  has_where_clause_predicates: false,
                  where_clause_span: tests/ui/utils/dump_hir.rs:43:19: 43:19 (#0),
                  span: tests/ui/utils/dump_hir.rs:43:12: 43:12 (#0),
              },
              kind: Const(
                  Ty {
                      hir_id: HirId(DefId(dump_hir::{impl#0}::N).1),
                      span: tests/ui/utils/dump_hir.rs:43:14: 43:19 (#0),
                      kind: Path(
                          Resolved(
                              None,
                              Path {
                                  span: tests/ui/utils/dump_hir.rs:43:14: 43:19 (#0),
                                  res: PrimTy(
                                      Uint(
                                          Usize,
                                      ),
                                  ),
                                  segments: [
                                      PathSegment {
                                          ident: usize#0,
                                          hir_id: HirId(DefId(dump_hir::{impl#0}::N).2),
                                          res: PrimTy(
                                              Uint(
                                                  Usize,
                                              ),
                                          ),
                                          args: None,
                                          infer_args: false,
                                      },
                                  ],
                              },
                          ),
                      ),
                  },
                  BodyId {
                      hir_id: HirId(DefId(dump_hir::{impl#0}::N).3),
                  },
              ),
              defaultness: Final,
              span: tests/ui/utils/dump_hir.rs:43:5: 43:30 (#0),
              vis_span: tests/ui/utils/dump_hir.rs:43:5: 43:5 (#0),
          },
      )
  --> tests/ui/utils/dump_hir.rs:43:5
   |
LL |     #[rpl::dump_hir]
   |     ---------------- HIR dumpped because of this attribute
...
LL |     const N: usize = 0_usize;
   |     ^^^^^^^^^^^^^^

note: Item(
          Item {
              ident: main#0,
              owner_id: DefId(dump_hir::main),
              kind: Fn {
                  sig: FnSig {
                      header: FnHeader {
                          safety: Normal(
                              Safe,
                          ),
                          constness: NotConst,
                          asyncness: NotAsync,
                          abi: Rust,
                      },
                      decl: FnDecl {
                          inputs: [],
                          output: DefaultReturn(
                              tests/ui/utils/dump_hir.rs:50:10: 50:10 (#0),
                          ),
                          c_variadic: false,
                          implicit_self: None,
                          lifetime_elision_allowed: false,
                      },
                      span: tests/ui/utils/dump_hir.rs:50:1: 50:10 (#0),
                  },
                  generics: Generics {
                      params: [],
                      predicates: [],
                      has_where_clause_predicates: false,
                      where_clause_span: tests/ui/utils/dump_hir.rs:50:10: 50:10 (#0),
                      span: tests/ui/utils/dump_hir.rs:50:8: 50:8 (#0),
                  },
                  body: BodyId {
                      hir_id: HirId(DefId(dump_hir::main).75),
                  },
                  has_body: true,
              },
              span: tests/ui/utils/dump_hir.rs:50:1: 103:2 (#0),
              vis_span: tests/ui/utils/dump_hir.rs:50:1: 50:1 (#0),
          },
      )
  --> tests/ui/utils/dump_hir.rs:50:1
   |
LL | #[rpl::dump_hir]
   | ---------------- HIR dumpped because of this attribute
...
LL | fn main() {
   | ^^^^^^^^^

note: Stmt(
          Stmt {
              hir_id: HirId(DefId(dump_hir::main).2),
              kind: Let(
                  LetStmt {
                      pat: Pat {
                          hir_id: HirId(DefId(dump_hir::main).10),
                          kind: Binding(
                              BindingMode(
                                  No,
                                  Not,
                              ),
                              HirId(DefId(dump_hir::main).10),
                              x#0,
                              None,
                          ),
                          span: tests/ui/utils/dump_hir.rs:56:9: 56:10 (#0),
                          default_binding_modes: true,
                      },
                      ty: None,
                      init: Some(
                          Expr {
                              hir_id: HirId(DefId(dump_hir::main).3),
                              kind: Call(
                                  Expr {
                                      hir_id: HirId(DefId(dump_hir::main).4),
                                      kind: Path(
                                          TypeRelative(
                                              Ty {
                                                  hir_id: HirId(DefId(dump_hir::main).6),
                                                  span: tests/ui/utils/dump_hir.rs:56:13: 56:16 (#0),
                                                  kind: Path(
                                                      Resolved(
                                                          None,
                                                          Path {
                                                              span: tests/ui/utils/dump_hir.rs:56:13: 56:16 (#0),
                                                              res: Def(
                                                                  Struct,
                                                                  DefId(alloc::sync::Arc),
                                                              ),
                                                              segments: [
                                                                  PathSegment {
                                                                      ident: Arc#0,
                                                                      hir_id: HirId(DefId(dump_hir::main).5),
                                                                      res: Def(
                                                                          Struct,
                                                                          DefId(alloc::sync::Arc),
                                                                      ),
                                                                      args: None,
                                                                      infer_args: true,
                                                                  },
                                                              ],
                                                          },
                                                      ),
                                                  ),
                                              },
                                              PathSegment {
                                                  ident: new#0,
                                                  hir_id: HirId(DefId(dump_hir::main).7),
                                                  res: Err,
                                                  args: None,
                                                  infer_args: true,
                                              },
                                          ),
                                      ),
                                      span: tests/ui/utils/dump_hir.rs:56:13: 56:21 (#0),
                                  },
                                  [
                                      Expr {
                                          hir_id: HirId(DefId(dump_hir::main).8),
                                          kind: Lit(
                                              Spanned {
                                                  node: Int(
                                                      Pu128(
                                                          0,
                                                      ),
                                                      Unsigned(
                                                          Usize,
                                                      ),
                                                  ),
                                                  span: tests/ui/utils/dump_hir.rs:56:22: 56:29 (#0),
                                              },
                                          ),
                                          span: tests/ui/utils/dump_hir.rs:56:22: 56:29 (#0),
                                      },
                                  ],
                              ),
                              span: tests/ui/utils/dump_hir.rs:56:13: 56:30 (#0),
                          },
                      ),
                      els: None,
                      hir_id: HirId(DefId(dump_hir::main).9),
                      span: tests/ui/utils/dump_hir.rs:56:5: 56:31 (#0),
                      source: Normal,
                  },
              ),
              span: tests/ui/utils/dump_hir.rs:56:5: 56:31 (#0),
          },
      )
  --> tests/ui/utils/dump_hir.rs:56:5
   |
LL |     #[rpl::dump_hir]
   |     ---------------- HIR dumpped because of this attribute
...
LL |     let x = Arc::new(0_usize);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^

note: Item(
          Item {
              ident: foo#0,
              owner_id: DefId(dump_hir::main::foo),
              kind: Fn {
                  sig: FnSig {
                      header: FnHeader {
                          safety: Normal(
                              Safe,
                          ),
                          constness: NotConst,
                          asyncness: NotAsync,
                          abi: Rust,
                      },
                      decl: FnDecl {
                          inputs: [],
                          output: DefaultReturn(
                              tests/ui/utils/dump_hir.rs:62:13: 62:13 (#0),
                          ),
                          c_variadic: false,
                          implicit_self: None,
                          lifetime_elision_allowed: false,
                      },
                      span: tests/ui/utils/dump_hir.rs:62:5: 62:13 (#0),
                  },
                  generics: Generics {
                      params: [],
                      predicates: [],
                      has_where_clause_predicates: false,
                      where_clause_span: tests/ui/utils/dump_hir.rs:62:13: 62:13 (#0),
                      span: tests/ui/utils/dump_hir.rs:62:11: 62:11 (#0),
                  },
                  body: BodyId {
                      hir_id: HirId(DefId(dump_hir::main::foo).4),
                  },
                  has_body: true,
              },
              span: tests/ui/utils/dump_hir.rs:62:5: 69:6 (#0),
              vis_span: tests/ui/utils/dump_hir.rs:62:5: 62:5 (#0),
          },
      )
  --> tests/ui/utils/dump_hir.rs:62:5
   |
LL |     #[rpl::dump_hir]
   |     ---------------- HIR dumpped because of this attribute
...
LL |     fn foo() {
   |     ^^^^^^^^

note: Expr(
          Expr {
              hir_id: HirId(DefId(dump_hir::main::foo).2),
              kind: Block(
                  Block {
                      stmts: [],
                      expr: None,
                      hir_id: HirId(DefId(dump_hir::main::foo).3),
                      rules: DefaultBlock,
                      span: tests/ui/utils/dump_hir.rs:68:9: 68:11 (#0),
                      targeted_by_break: false,
                  },
                  None,
              ),
              span: tests/ui/utils/dump_hir.rs:68:9: 68:11 (#0),
          },
      )
  --> tests/ui/utils/dump_hir.rs:68:9
   |
LL |         #[rpl::dump_hir]
   |         ---------------- HIR dumpped because of this attribute
...
LL |         {}
   |         ^^

note: Expr(
          Expr {
              hir_id: HirId(DefId(dump_hir::main).12),
              kind: If(
                  Expr {
                      hir_id: HirId(DefId(dump_hir::main).14),
                      kind: DropTemps(
                          Expr {
                              hir_id: HirId(DefId(dump_hir::main).13),
                              kind: Lit(
                                  Spanned {
                                      node: Bool(
                                          true,
                                      ),
                                      span: tests/ui/utils/dump_hir.rs:75:8: 75:12 (#0),
                                  },
                              ),
                              span: tests/ui/utils/dump_hir.rs:75:8: 75:12 (#0),
                          },
                      ),
                      span: tests/ui/utils/dump_hir.rs:75:8: 75:12 (#11),
                  },
                  Expr {
                      hir_id: HirId(DefId(dump_hir::main).16),
                      kind: Block(
                          Block {
                              stmts: [],
                              expr: None,
                              hir_id: HirId(DefId(dump_hir::main).15),
                              rules: DefaultBlock,
                              span: tests/ui/utils/dump_hir.rs:75:13: 77:6 (#0),
                              targeted_by_break: false,
                          },
                          None,
                      ),
                      span: tests/ui/utils/dump_hir.rs:75:13: 77:6 (#0),
                  },
                  Some(
                      Expr {
                          hir_id: HirId(DefId(dump_hir::main).17),
                          kind: Block(
                              Block {
                                  stmts: [],
                                  expr: None,
                                  hir_id: HirId(DefId(dump_hir::main).18),
                                  rules: DefaultBlock,
                                  span: tests/ui/utils/dump_hir.rs:77:12: 78:6 (#0),
                                  targeted_by_break: false,
                              },
                              None,
                          ),
                          span: tests/ui/utils/dump_hir.rs:77:12: 78:6 (#0),
                      },
                  ),
              ),
              span: tests/ui/utils/dump_hir.rs:75:5: 78:6 (#0),
          },
      )
  --> tests/ui/utils/dump_hir.rs:75:5
   |
LL |       #[rpl::dump_hir]
   |       ---------------- HIR dumpped because of this attribute
...
LL | /     if true {
LL | |
LL | |     } else {
LL | |     }
   | |_____^

note: Expr(
          Expr {
              hir_id: HirId(DefId(dump_hir::main).20),
              kind: Call(
                  Expr {
                      hir_id: HirId(DefId(dump_hir::main).21),
                      kind: Path(
                          Resolved(
                              None,
                              Path {
                                  span: tests/ui/utils/dump_hir.rs:84:5: 84:23 (#0),
                                  res: Def(
                                      Fn,
                                      DefId(std::thread::spawn),
                                  ),
                                  segments: [
                                      PathSegment {
                                          ident: std#0,
                                          hir_id: HirId(DefId(dump_hir::main).22),
                                          res: Def(
                                              Mod,
                                              DefId(std),
                                          ),
                                          args: None,
                                          infer_args: true,
                                      },
                                      PathSegment {
                                          ident: thread#0,
                                          hir_id: HirId(DefId(dump_hir::main).23),
                                          res: Def(
                                              Mod,
                                              DefId(std::thread),
                                          ),
                                          args: None,
                                          infer_args: true,
                                      },
                                      PathSegment {
                                          ident: spawn#0,
                                          hir_id: HirId(DefId(dump_hir::main).24),
                                          res: Def(
                                              Fn,
                                              DefId(std::thread::spawn),
                                          ),
                                          args: None,
                                          infer_args: true,
                                      },
                                  ],
                              },
                          ),
                      ),
                      span: tests/ui/utils/dump_hir.rs:84:5: 84:23 (#0),
                  },
                  [
                      Expr {
                          hir_id: HirId(DefId(dump_hir::main).25),
                          kind: Closure(
                              Closure {
                                  def_id: DefId(dump_hir::main::{closure#0}),
                                  binder: Default,
                                  constness: NotConst,
                                  capture_clause: Value {
                                      move_kw: tests/ui/utils/dump_hir.rs:84:24: 84:28 (#0),
                                  },
                                  bound_generic_params: [],
                                  fn_decl: FnDecl {
                                      inputs: [],
                                      output: DefaultReturn(
                                          tests/ui/utils/dump_hir.rs:84:31: 84:31 (#0),
                                      ),
                                      c_variadic: false,
                                      implicit_self: None,
                                      lifetime_elision_allowed: false,
                                  },
                                  body: BodyId {
                                      hir_id: HirId(DefId(dump_hir::main).26),
                                  },
                                  fn_decl_span: tests/ui/utils/dump_hir.rs:84:24: 84:31 (#0),
                                  fn_arg_span: Some(
                                      tests/ui/utils/dump_hir.rs:84:29: 84:31 (#0),
                                  ),
                                  kind: Closure,
                              },
                          ),
                          span: tests/ui/utils/dump_hir.rs:84:24: 87:6 (#0),
                      },
                  ],
              ),
              span: tests/ui/utils/dump_hir.rs:84:5: 87:7 (#0),
          },
      )
  --> tests/ui/utils/dump_hir.rs:84:5
   |
LL |       #[rpl::dump_hir]
   |       ---------------- HIR dumpped because of this attribute
...
LL | /     std::thread::spawn(move || {
LL | |
LL | |         println!("{x}");
LL | |     });
   | |______^

note: Item(
          Item {
              ident: mac#0,
              owner_id: DefId(dump_hir::main::mac),
              kind: Macro(
                  MacroDef {
                      body: DelimArgs {
                          dspan: DelimSpan {
                              open: tests/ui/utils/dump_hir.rs:93:22: 93:23 (#0),
                              close: tests/ui/utils/dump_hir.rs:99:5: 99:6 (#0),
                          },
                          delim: Brace,
                          tokens: TokenStream(
                              [
                                  Delimited(
                                      DelimSpan {
                                          open: tests/ui/utils/dump_hir.rs:95:9: 95:10 (#0),
                                          close: tests/ui/utils/dump_hir.rs:95:10: 95:11 (#0),
                                      },
                                      DelimSpacing {
                                          open: JointHidden,
                                          close: Alone,
                                      },
                                      Parenthesis,
                                      TokenStream(
                                          [],
                                      ),
                                  ),
                                  Token(
                                      Token {
                                          kind: FatArrow,
                                          span: tests/ui/utils/dump_hir.rs:95:12: 95:14 (#0),
                                      },
                                      Alone,
                                  ),
                                  Delimited(
                                      DelimSpan {
                                          open: tests/ui/utils/dump_hir.rs:95:15: 95:16 (#0),
                                          close: tests/ui/utils/dump_hir.rs:98:9: 98:10 (#0),
                                      },
                                      DelimSpacing {
                                          open: Alone,
                                          close: Joint,
                                      },
                                      Brace,
                                      TokenStream(
                                          [
                                              Token(
                                                  Token {
                                                      kind: Pound,
                                                      span: tests/ui/utils/dump_hir.rs:96:13: 96:14 (#0),
                                                  },
                                                  JointHidden,
                                              ),
                                              Delimited(
                                                  DelimSpan {
                                                      open: tests/ui/utils/dump_hir.rs:96:14: 96:15 (#0),
                                                      close: tests/ui/utils/dump_hir.rs:96:28: 96:29 (#0),
                                                  },
                                                  DelimSpacing {
                                                      open: JointHidden,
                                                      close: Alone,
                                                  },
                                                  Bracket,
                                                  TokenStream(
                                                      [
                                                          Token(
                                                              Token {
                                                                  kind: Ident(
                                                                      "rpl",
                                                                      No,
                                                                  ),
                                                                  span: tests/ui/utils/dump_hir.rs:96:15: 96:18 (#0),
                                                              },
                                                              Joint,
                                                          ),
                                                          Token(
                                                              Token {
                                                                  kind: PathSep,
                                                                  span: tests/ui/utils/dump_hir.rs:96:18: 96:20 (#0),
                                                              },
                                                              JointHidden,
                                                          ),
                                                          Token(
                                                              Token {
                                                                  kind: Ident(
                                                                      "dump_hir",
                                                                      No,
                                                                  ),
                                                                  span: tests/ui/utils/dump_hir.rs:96:20: 96:28 (#0),
                                                              },
                                                              JointHidden,
                                                          ),
                                                      ],
                                                  ),
                                              ),
                                              Token(
                                                  Token {
                                                      kind: Ident(
                                                          "println",
                                                          No,
                                                      ),
                                                      span: tests/ui/utils/dump_hir.rs:97:13: 97:20 (#0),
                                                  },
                                                  Joint,
                                              ),
                                              Token(
                                                  Token {
                                                      kind: Not,
                                                      span: tests/ui/utils/dump_hir.rs:97:20: 97:21 (#0),
                                                  },
                                                  JointHidden,
                                              ),
                                              Delimited(
                                                  DelimSpan {
                                                      open: tests/ui/utils/dump_hir.rs:97:21: 97:22 (#0),
                                                      close: tests/ui/utils/dump_hir.rs:97:28: 97:29 (#0),
                                                  },
                                                  DelimSpacing {
                                                      open: JointHidden,
                                                      close: Joint,
                                                  },
                                                  Parenthesis,
                                                  TokenStream(
                                                      [
                                                          Token(
                                                              Token {
                                                                  kind: Literal(
                                                                      Lit {
                                                                          kind: Str,
                                                                          symbol: "test",
                                                                          suffix: None,
                                                                      },
                                                                  ),
                                                                  span: tests/ui/utils/dump_hir.rs:97:22: 97:28 (#0),
                                                              },
                                                              JointHidden,
                                                          ),
                                                      ],
                                                  ),
                                              ),
                                              Token(
                                                  Token {
                                                      kind: Semi,
                                                      span: tests/ui/utils/dump_hir.rs:97:29: 97:30 (#0),
                                                  },
                                                  Alone,
                                              ),
                                          ],
                                      ),
                                  ),
                                  Token(
                                      Token {
                                          kind: Semi,
                                          span: tests/ui/utils/dump_hir.rs:98:10: 98:11 (#0),
                                      },
                                      Alone,
                                  ),
                              ],
                          ),
                      },
                      macro_rules: true,
                  },
                  Bang,
              ),
              span: tests/ui/utils/dump_hir.rs:93:5: 99:6 (#0),
              vis_span: tests/ui/utils/dump_hir.rs:93:5: 93:5 (#0),
          },
      )
  --> tests/ui/utils/dump_hir.rs:93:5
   |
LL |     #[rpl::dump_hir]
   |     ---------------- HIR dumpped because of this attribute
...
LL |     macro_rules! mac {
   |     ^^^^^^^^^^^^^^^^

error: abort due to debugging
  --> tests/ui/utils/dump_hir.rs:5:1
   |
LL | #[rpl::dump_hir]
   | ^^^^^^^^^^^^^^^^ help: remove this attribute
   |
   = note: `#[rpl::dump_hir]`, `#[rpl::print_hir]` and `#[rpl::dump_mir]` are only used for debugging
   = note: this error is to remind you removing these attributes

error: abort due to debugging
  --> tests/ui/utils/dump_hir.rs:11:1
   |
LL | #[rpl::dump_hir]
   | ^^^^^^^^^^^^^^^^ help: remove this attribute
   |
   = note: `#[rpl::dump_hir]`, `#[rpl::print_hir]` and `#[rpl::dump_mir]` are only used for debugging
   = note: this error is to remind you removing these attributes

error: abort due to debugging
  --> tests/ui/utils/dump_hir.rs:20:1
   |
LL | #[rpl::dump_hir]
   | ^^^^^^^^^^^^^^^^ help: remove this attribute
   |
   = note: `#[rpl::dump_hir]`, `#[rpl::print_hir]` and `#[rpl::dump_mir]` are only used for debugging
   = note: this error is to remind you removing these attributes

error: abort due to debugging
  --> tests/ui/utils/dump_hir.rs:26:5
   |
LL |     #[rpl::dump_hir]
   |     ^^^^^^^^^^^^^^^^ help: remove this attribute
   |
   = note: `#[rpl::dump_hir]`, `#[rpl::print_hir]` and `#[rpl::dump_mir]` are only used for debugging
   = note: this error is to remind you removing these attributes

error: abort due to debugging
  --> tests/ui/utils/dump_hir.rs:33:1
   |
LL | #[rpl::dump_hir]
   | ^^^^^^^^^^^^^^^^ help: remove this attribute
   |
   = note: `#[rpl::dump_hir]`, `#[rpl::print_hir]` and `#[rpl::dump_mir]` are only used for debugging
   = note: this error is to remind you removing these attributes

error: abort due to debugging
  --> tests/ui/utils/dump_hir.rs:39:5
   |
LL |     #[rpl::dump_hir]
   |     ^^^^^^^^^^^^^^^^ help: remove this attribute
   |
   = note: `#[rpl::dump_hir]`, `#[rpl::print_hir]` and `#[rpl::dump_mir]` are only used for debugging
   = note: this error is to remind you removing these attributes

error: abort due to debugging
  --> tests/ui/utils/dump_hir.rs:46:1
   |
LL | #[rpl::dump_hir]
   | ^^^^^^^^^^^^^^^^ help: remove this attribute
   |
   = note: `#[rpl::dump_hir]`, `#[rpl::print_hir]` and `#[rpl::dump_mir]` are only used for debugging
   = note: this error is to remind you removing these attributes

error: abort due to debugging
  --> tests/ui/utils/dump_hir.rs:52:5
   |
LL |     #[rpl::dump_hir]
   |     ^^^^^^^^^^^^^^^^ help: remove this attribute
   |
   = note: `#[rpl::dump_hir]`, `#[rpl::print_hir]` and `#[rpl::dump_mir]` are only used for debugging
   = note: this error is to remind you removing these attributes

error: abort due to debugging
  --> tests/ui/utils/dump_hir.rs:58:5
   |
LL |     #[rpl::dump_hir]
   |     ^^^^^^^^^^^^^^^^ help: remove this attribute
   |
   = note: `#[rpl::dump_hir]`, `#[rpl::print_hir]` and `#[rpl::dump_mir]` are only used for debugging
   = note: this error is to remind you removing these attributes

error: abort due to debugging
  --> tests/ui/utils/dump_hir.rs:64:9
   |
LL |         #[rpl::dump_hir]
   |         ^^^^^^^^^^^^^^^^ help: remove this attribute
   |
   = note: `#[rpl::dump_hir]`, `#[rpl::print_hir]` and `#[rpl::dump_mir]` are only used for debugging
   = note: this error is to remind you removing these attributes

error: abort due to debugging
  --> tests/ui/utils/dump_hir.rs:71:5
   |
LL |     #[rpl::dump_hir]
   |     ^^^^^^^^^^^^^^^^ help: remove this attribute
   |
   = note: `#[rpl::dump_hir]`, `#[rpl::print_hir]` and `#[rpl::dump_mir]` are only used for debugging
   = note: this error is to remind you removing these attributes

error: abort due to debugging
  --> tests/ui/utils/dump_hir.rs:80:5
   |
LL |     #[rpl::dump_hir]
   |     ^^^^^^^^^^^^^^^^ help: remove this attribute
   |
   = note: `#[rpl::dump_hir]`, `#[rpl::print_hir]` and `#[rpl::dump_mir]` are only used for debugging
   = note: this error is to remind you removing these attributes

error: abort due to debugging
  --> tests/ui/utils/dump_hir.rs:89:5
   |
LL |     #[rpl::dump_hir]
   |     ^^^^^^^^^^^^^^^^ help: remove this attribute
   |
   = note: `#[rpl::dump_hir]`, `#[rpl::print_hir]` and `#[rpl::dump_mir]` are only used for debugging
   = note: this error is to remind you removing these attributes

error: aborting due to 13 previous errors

